# batch-downloader

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
configs/: gansu.example.json
scripts/: run_gansu_example.ps1
src/gansu_downloader/: __init__.py  arcgis.py  batch.py  cli.py  estimates.py  files.py  settings.py  status.py  tiles.py
tests/: test_arcgis.py  test_estimates.py  test_files.py  test_tiles.py
