[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gansu-batch-downloader"
version = "0.1.0"
description = "Batch download and ArcGIS-clip regional Esri Wayback imagery."
requires-python = ">=3.10"
dependencies = [
  "Pillow>=10",
  "requests>=2.31",
]

[project.scripts]
gansu-download = "gansu_downloader.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
